[tool.poetry]
name = "my-streamlit"
version = "0.1.0"
description = ""
authors = ["Aviad Rozenhek <aviadr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
